# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import floorsRouter from "./floors";
 import roomsRouter from "./rooms";
 import bookingsRouter from "./bookings";
+import couponsRouter from "./coupons";
 import attractionsRouter from "./attractions";
 import reviewsRouter from "./reviews";
 import galleryRouter from "./gallery";
@@ -19,6 +20,7 @@ router.use("/auth", authRouter);
 router.use("/floors", floorsRouter);
 router.use("/rooms", roomsRouter);
 router.use("/bookings", bookingsRouter);
+router.use("/coupons", couponsRouter);
 router.use("/attractions", attractionsRouter);
 router.use("/reviews", reviewsRouter);
 router.use("/gallery", galleryRouter);
